# modelify_tools

./: CMakeLists.txt  README.md  package.xml
include/modelify_tools/: depth_traits.h
launch/: openni2_depth_gun_primesense_silver.launch  openni2_primesense_with_markers.launch
launch/depth_gun_calibration/: depth_intrinsics_depth_gun_silver.yaml  extrinsics_depth_gun_silver.launch  rgb_intrinsics_depth_gun_silver.yaml
launch/marker_primesense/: depth_PS1080_PrimeSense.yaml  extrinsics_primesense_with_markers.launch  rgb_PS1080_PrimeSense.yaml
src/: align_objects.cc  modify_ply_files.cc  project_to_pointcloud.cc  test_registered_pointclouds.cc
