<?xml version="1.0"?>
<package format="2">
  <name>modelify_tools</name>
  <version>0.0.0</version>
  <description> Tools for easier manipulation of pointcloud test data. </description>

  <maintainer email="marko.panjek@gmail.com">Marko Panjek</maintainer>

  <author>Marko Panjek</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>alignment_toolbox</depend>
  <depend>descriptor_toolbox</depend>
  <depend>keypoint_toolbox</depend>
  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>modelify_common</depend>
  <depend>pcl_catkin</depend>


</package>
